--- a/styles/website.css
+++ b/styles/website.css
@@ -1,5 +1,4 @@
 .book-summary {
-    background: url(https://raw.githubusercontent.com/weaming/gitbook-wiki/master/styles/poetry.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -7,7 +6,7 @@
 
 .book-summary a,
 .book-summary span {
-    color: white !important;
+    color: #333;
     font-weight: bold;
 }
 
